修复ovmf和qemupci空间冲突问题 当内存设置为(0,3.5G]，pci空间为[3.5G,4G) 当内存设置为(3.5G以上)，pci空间为[3G,4G)
Signed-off-by: yangfulai <yangfulai@ruijie.com.cn>

--- a/edk2/Makefile
+++ b/edk2/Makefile
@@ -27,6 +27,6 @@ ovmf: edk_basetool
 clean:
 	-cd ${EDK_DIR}/BaseTools && $(MAKE) clean -f GNUmakefile
 	@rm -rf ${EDK_DIR}/Build
-	cd ${EDK_DIR}/Conf && rm -rf `ls | grep -v "ReadMe.txt"` .cache
+	cd ${EDK_DIR}/Conf && rm -rf `ls | grep -v "ReadMe.txt"` .cache .AutoGenIdFile.txt
  
 .PHONY: all clean ovmf edk_basetool
